Play first song at '/', randomize trending-songs component and limit to 2 rows, and fix white inner background to stretch to full length of page

--- a/app/assets/stylesheets/landing/trending_songs.scss
+++ b/app/assets/stylesheets/landing/trending_songs.scss
@@ -1,3 +1,7 @@
+.song-index {
+  display: table;
+}
+
 .trending-songs-title {
   font-size: 24px;
   text-align: center;
